add statless jwt instance, refactor all routers and services on it
