# frontend/light-task-frontend/openapi.json
@@ -53,6 +53,24 @@
         ],
         "summary": "Refresh Jwt",
         "operationId": "refresh_jwt_api_auth_refresh_post",
+        "parameters": [
+          {
+            "name": "refresh_token",
+            "in": "cookie",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Refresh Token"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -63,13 +81,39 @@
                 }
               }
             }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
           }
-        },
-        "security": [
-          {
-            "HTTPBearer": []
+        }
+      }
+    },
+    "/api/auth/logout": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Logout",
+        "operationId": "logout_api_auth_logout_post",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+
+                }
+              }
+            }
           }
-        ]
+        }
       }
     },
     "/api/users/register": {
@@ -2676,10 +2720,6 @@
             "type": "string",
             "title": "Accesstoken"
           },
-          "refreshToken": {
-            "type": "string",
-            "title": "Refreshtoken"
-          },
           "tokenType": {
             "type": "string",
             "title": "Tokentype",
@@ -2688,8 +2728,7 @@
         },
         "type": "object",
         "required": [
-          "accessToken",
-          "refreshToken"
+          "accessToken"
         ],
         "title": "Token"
       },
